# rbodies

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
dynamics/: simulation  simulation2  video_processing.py
dynamics/processed_data/: sample.csv  sample_a_circ_10_linearresonance.csv  sample_a_circ_7.5_linearresonance.csv  sample_a_circ_7_linearresonance.csv  sample_a_circ_8_linearresonance.csv  sample_b_circ_7_linear_resonance_impulse.csv  sample_b_circ_7_linearresonance.csv  sample_b_circ_7_unwind_resonance.csv  sample_b_circ_7_unwound_linear_resonance.csv  sample_b_circ_7_wind_resonance.csv  sample_b_circ_7_wound_linear_resonance.csv
instron/: instron_processing.py
instron/sorted_data/: 10yoyo-hysteresis-sample2-windNeg5-trial1_1.csv  11yoyo-hysteresis-sample2-windNeg10-trial1_1.csv  1yoyo1_1.csv  2yoyo-hysteresis_1.csv  3yoyo-hysteresis-10winds__1.csv  4yoyo-hysteresis-5winds_1.csv  5yoyo-hysteresis-10winds-trial2_1.csv  6yoyo-hysteresis-10wind-trial3_1.csv  7yoyo-hysteresis-10wind-trial4_1.csv  8yoyo-hysteresis-0wind-after-manytrials_1.csv  9yoyo-hysteresis-sample2-wind0-trial1_1.csv
report/: report.tex
stepper_motor/: stepper_motor.ino
