[project]
name = "yoyos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click==8.4.1",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "docopt==0.6.2",
    "fonttools==4.63.0",
    "kiwisolver==1.5.0",
    "matplotlib==3.10.9",
    "numpy==2.4.6",
    "opencv-python==4.13.0.92",
    "packaging==26.2",
    "pandas==3.0.3",
    "pillow==12.2.0",
    "pycine==0.3.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
]
